Correct Pricing Page .css and .html docs added for future use Cropped image of banner...now called "academic_support2.jpeg"

--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,7 @@ h2 {
     color: white;
 	width: 40%;
 	padding: 20px;
+	right: 14px;
 	/*
 	right: 0px;
 	top: 45%;
